@@ -3699,9 +3699,6 @@ static void osel_clear (WIN_t *q) {
    }
    q->osel_tot = 0;
    q->osel_1st = NULL;
-#ifndef USE_X_COLHDR
-   OFFw(q, NOHISEL_xxx);
-#endif
 } // end: osel_clear
 
 
@@ -4106,9 +4103,6 @@ static const char *configs_file (FILE *fp, const char *name, float *delay) {
          if (&w->rc.fieldscur[n] != strrchr(w->rc.fieldscur, w->rc.fieldscur[n]))
             return p;
       }
-#ifndef USE_X_COLHDR
-      OFFw(w, NOHIFND_xxx | NOHISEL_xxx);
-#endif
    } // end: for (GROUPSMAX)
 
    // any new addition(s) last, for older rcfiles compatibility...
@@ -4552,10 +4546,6 @@ static void win_reset (WIN_t *q) {
 
          osel_clear(q);
          q->findstr[0] = '\0';
-#ifndef USE_X_COLHDR
-         // NOHISEL_xxx is redundant (already turned off by osel_clear)
-         OFFw(q, NOHIFND_xxx | NOHISEL_xxx);
-#endif
          q->rc.combine_cpus = 0;
 } // end: win_reset
 
@@ -5114,10 +5104,6 @@ static void find_string (int ch) {
       snprintf(Curwin->findstr, FNDBUFSIZ, "%s", str);
       Curwin->findlen = strlen(Curwin->findstr);
       found = 0;
-#ifndef USE_X_COLHDR
-      if (Curwin->findstr[0]) SETw(Curwin, NOHIFND_xxx);
-      else OFFw(Curwin, NOHIFND_xxx);
-#endif
    }
    if (Curwin->findstr[0]) {
       SETw(Curwin, NOPRINT_xxx);
@@ -5200,9 +5186,6 @@ static void other_filters (int ch) {
             show_msg(p);
             return;
          }
-#ifndef USE_X_COLHDR
-         SETw(w, NOHISEL_xxx);
-#endif
          break;
       case kbd_CtrlO:
          if (VIZCHKw(w)) {
@@ -5702,8 +5685,7 @@ static void keys_task (int ch) {
             TOGw(w, Show_HICOLS);
             capsmk(w);
 #else
-            if (ENUviz(w, w->rc.sortindx)
-            && !CHKw(w, NOHIFND_xxx | NOHISEL_xxx)) {
+            if (ENUviz(w, w->rc.sortindx)) {
                TOGw(w, Show_HICOLS);
                if (ENUpos(w, w->rc.sortindx) < w->begpflg) {
                   if (CHKw(w, Show_HICOLS)) w->begpflg += 2;
@@ -6397,10 +6379,10 @@ static const char *task_show (const WIN_t *q, const int idx) {
       switch (i) {
 #ifndef USE_X_COLHDR
          // these 2 aren't real procflgs, they're used in column highlighting!
-         case EU_XON:
          case EU_XOF:
+         case EU_XON:
             cp = NULL;
-            if (!CHKw(q, NOPRINT_xxx | NOHIFND_xxx | NOHISEL_xxx)) {
+            if (!CHKw(q, NOPRINT_xxx)) {
                /* treat running tasks specially - entire row may get highlighted
                   so we needn't turn it on and we MUST NOT turn it off */
                if (!('R' == p->state && CHKw(q, Show_HIROWS)))
