@@ -9,6 +9,7 @@ procps-ng-NEXT
   * top: added long versions of command line options
   * top: the time related fields can now be user scaled
   * top: added a 'start time' field (STARTED)
+  * top: column highlighting allowed under 'L' or 'O'
 
 
 procps-ng-3.3.17
